# RenderizadorOpenGL

./: .gitignore  CONTRIBUTING.md  CREDITS.md  README.md  pyproject.toml  render_frag.py  requirements.txt
docs/: fragment_shader_renderer.md  getting_started.md  shadertoy_compatibility.md
exemplos/: exemplo0.py  exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py  exemplo5.py  exemplo6.py  exemplo7.py  exemplo8.py  exemplo9.py  exemploA.py  exemplo_LED_Spectrum.py  exemplo_buoy.py  exemplo_cubo_interativo.py  exemplo_le_frag.py  exemplo_quad_textura.py  exemplo_shadertoy.py  exemplo_shadertoy_inline.py  exemplo_sound.py  exemplo_texturas_audio.py  exemplo_triangulo.py  mouse.frag  octagrams.frag  ray_marching.frag  silexars.frag  teste.frag  timedelta.frag
exemplos/frag/: LED_Spectrum.frag  buoy.frag  cine_shader_lava.frag  fires.frag  flame.frag  generators.frag  iDate.frag  ichannelresolutiontest.frag  mandelbulb.frag  menger_sponge.frag  octagrams.frag  ray_marching.frag  silexars.frag  sound.frag  sound_sinus_wave.frag  timedelta.frag
exemplos/texture/: bridge-9620082_1280.tiff
src/renderizador/: __init__.py  audio.py  callbacks.py  camera.py  programmable_shaders.py  renderizador.py  teste_interface.py  texture.py  transformations.py  uniforms.py  utils.py
src/renderizador/audio/: __init__.py  audio.py  fft_processor.py
src/renderizador/core/: __init__.py  gui.py  renderer.py  window.py
src/renderizador/graphics/: __init__.py  camera.py  geometry.py  mesh.py  primitives.py  shaders.py  texture.py
src/renderizador/utils/: __init__.py  callbacks.py  fragshader_rndr.py  transformations.py  uniforms.py  utils.py
